<resources>
    <string name="app_name">MyCalculator</string>
    <string name="clear">C</string>
    <string name="tan">tan</string>
    <string name="fac">n!</string>
    <string name="back">back</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="right">)</string>
    <string name="left">(</string>
    <string name="square">^</string>
    <string name="sqrt">√</string>
    <string name="divide">÷</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="pi">π</string>
    <string name="e">e</string>
</resources>
