<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="1dp"

    android:background="#0099cc">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:id="@+id/display"
        android:cursorVisible="false"
        android:textSize="50sp"
        android:editable="false"
        android:gravity="right|bottom"
        android:background="#99ccff"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        />


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/clear"
            android:text="@string/clear"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"/>

         <Button
            android:layout_height="55dp"
            android:id="@+id/tan"
            android:text="@string/tan"
            android:textSize="40sp"
            android:layout_width="88dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"/>
        <Button
            android:layout_height="55dp"
            android:id="@+id/fac"
            android:text="@string/fac"
            android:textSize="40sp"
            android:layout_width="88dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />


        <Button
            android:layout_height="55dp"
            android:id="@+id/back"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="40sp"
            android:layout_width="88dp"
            android:textColor="#000"
            android:background="#666666"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/cos"
            android:text="@string/cos"
            android:textSize="40sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/sin"
            android:text="@string/sin"
            android:textSize="40sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/left"
            android:text="@string/left"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/right"
            android:text="@string/right"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />



    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/square"
            android:text="@string/square"
            android:textSize="40sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"/>
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/sqrt"
            android:text="@string/sqrt"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />

        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/div"
            android:text="@string/divide"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"/>

        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/add"
            android:text="@string/add"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/seven"
            android:text="@string/seven"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/eight"
            android:text="@string/eight"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/nine"
            android:text="@string/nine"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"/>
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/sub"
            android:text="@string/subtract"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/four"
            android:text="@string/four"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
        <Button
            android:layout_height="55dp"
            android:id="@+id/five"
            android:layout_width="88dp"
            android:text="@string/five"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/six"
            android:text="@string/six"
            android:textSize="40sp"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"/>
        <Button
            android:layout_height="55dp"
            android:layout_width="88dp"
            android:id="@+id/mul"
            android:text="@string/multiply"
            android:textSize="40sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="#003366"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            />
    </TableRow>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="88dp"
                    android:layout_height="55dp"
                    android:text="@string/one"
                    android:textSize="40sp"
                    android:id="@+id/one"
                    android:textColor="#fff"
                    android:background="#003366"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"/>
                <Button
                    android:layout_width="88dp"
                    android:layout_height="55dp"
                    android:text="@string/two"
                    android:textSize="40sp"
                    android:id="@+id/two"
                    android:textColor="#fff"
                    android:background="#003366"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    />
                <Button
                    android:layout_width="88dp"
                    android:layout_height="55dp"
                    android:text="@string/three"
                    android:textSize="40sp"
                    android:id="@+id/three"
                    android:textColor="#fff"
                    android:background="#003366"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="178dp"
                    android:layout_height="55dp"
                    android:text="@string/zero"
                    android:id="@+id/zero"
                    android:textSize="40sp"
                    android:textColor="#fff"
                    android:background="#003366"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"/>
                <Button
                    android:layout_width="88dp"
                    android:layout_height="55dp"
                    android:text="@string/dot"
                    android:textSize="40sp"
                    android:id="@+id/dot"
                    android:textColor="#fff"
                    android:background="#003366"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"/>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:layout_width="88dp"
            android:layout_height="113sp"
            android:text="@string/equal"
            android:textSize="50sp"
            android:id="@+id/equal"
            android:background="#666666"/>

    </LinearLayout>
</LinearLayout>
